<resources>
    <string name="app_name">MalosHabitos</string>
    <string name="bienvenido">bienvenido</string>


    <string name="adios_malos_habitos">Adios Malos Hábitos</string>
    <string name="bienvenido_menu">BIENVENIDO</string>
    <string name="registrar_malos_h">Registrar Malos Hábitos</string>
    <string name="metas">Metas</string>
    <string name="desafios_diarios">Desafíos Diarios</string>
    <string name="Registrate">¿No tienes cuenta? Regístrate</string>
    <string name="ingresa_tu_nombre_login">Ingresa tu nombre</string>
    <string name="malos_habitos_app">Malos Hábitos App</string>
    <string name="ingresa_tu_contrasena">Ingresa tu contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>


</resources>
