<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <!-- Contenedor para centrar los elementos -->
    <LinearLayout
        android:id="@+id/linearLayoutCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Título de la app -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malos_habitos_app"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <!-- EditText para nombre de usuario -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingresa_tu_nombre_login"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <!-- EditText para contraseña -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ingresa_tu_contrasena"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <!-- Botón para iniciar sesión -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            android:padding="12dp"
            android:layout_marginBottom="24dp"/>

        <!-- Botón para registrarse -->
        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrate"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <!-- Contenedor para cargar los fragmentos -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
